test: 통합 테스트 공통 베이스 도입 (AbstractIntegrationTest·UserFixture)
token() 4중 복제·어노테이션 스택 4중 복붙·리플렉션 헬퍼 3중 복제 제거,
deprecated @MockBean → @MockitoBean, 클록 스터빙을 token()에서 stubToday()로 분리,
이스케이프 JSON → text block, 한 글자 변수 리네임.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>